# swagger.yml
@@ -752,6 +752,31 @@ paths:
       tags:
         - OperatorAPI
 
+  /namespaces/{namespace}/tenants/{tenant}/log-report:
+    get:
+      summary: Get Tenant Log Report
+      operationId: GetTenantLogReport
+      parameters:
+        - name: namespace
+          in: path
+          required: true
+          type: string
+        - name: tenant
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: A successful response.
+          schema:
+            $ref: "#/definitions/tenantLogReport"
+        default:
+          description: Generic error response.
+          schema:
+            $ref: "#/definitions/error"
+      tags:
+        - OperatorAPI
+
   /namespaces/{namespace}/tenants/{tenant}/pods/{podName}:
     get:
       summary: Get Logs for Pod
@@ -3378,3 +3403,10 @@ definitions:
         type: integer
       standardSCParity:
         type: integer
+  tenantLogReport:
+    type: object
+    properties:
+      filename:
+        type: string
+      blob:
+       type: string        
